@@ -55,11 +55,27 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>19</source> <!-- or your Java version -->
+                    <target>19</target> <!-- or your Java version -->
+                    <release>19</release> <!-- or your Java version -->
+                    <compilerArgs>
+                        <arg>--module-path</arg>
+                        <arg>/usr/local/Frameworks/javafx-sdk-21.0.1/lib</arg>
+                        <arg>--add-modules</arg>
+                        <arg>javafx.controls,javafx.fxml,javafx.base,javafx.graphics</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.maven.plugin.version}</version>
                 <configuration>
-                    <mainClass>FXMLDisplayApp</mainClass>
+                    <mainClass>edu.usc.team2.jfx.FXMLDisplayApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
